--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "'Ivan Petropolsky' <i.petropolsky@hh.ru>",
   "license": "MIT",
   "scripts": {
-    "postinstall": "ln -sf $(pwd)/githooks/* .git/hooks"
+    "postinstall": "ln -sf $(pwd)/githooks/* .git/hooks",
+    "check": "yarn eslint .",
+    "ts" : "npx tsc main.ts"
   },
   "devDependencies": {
     "eslint": "8.29.0",
@@ -14,5 +16,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "lint-staged": "13.1.0",
     "prettier": "2.8.0"
+  },
+  "dependencies": {
+    "typescript": "5.3.3"
   }
 }
