--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "postinstall": "ln -sf $(pwd)/githooks/* .git/hooks",
     "check": "yarn eslint .",
-    "ts" : "npx tsc main.ts"
+    "ts": "npx tsc main.ts"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
     "eslint": "8.29.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
